[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/egoventure/nodes/message_screen.gd" type="Script" id=1]

[sub_resource type="Animation" id=1]
resource_name = "message"
tracks/0/type = "value"
tracks/0/path = NodePath("Screen:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="CanvasLayer" type="CanvasLayer"]
layer = 110
script = ExtResource( 1 )

[node name="Screen" type="Control" parent="."]
visible = false
margin_right = 2560.0
margin_bottom = 1440.0
mouse_filter = 2

[node name="Panel" type="Panel" parent="Screen"]
margin_right = 2560.0
margin_bottom = 1440.0
mouse_filter = 2

[node name="Margin" type="MarginContainer" parent="Screen"]
margin_top = 7.0
margin_right = 2553.0
margin_bottom = 1433.0
mouse_filter = 2

[node name="Message" type="Label" parent="Screen/Margin"]
margin_bottom = 14.0
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="Animation" type="AnimationPlayer" parent="."]
anims/message = SubResource( 1 )

[node name="DebugScreen" type="Control" parent="."]
visible = false
margin_right = 2560.0
margin_bottom = 1440.0
mouse_filter = 2

[node name="DebugMargin" type="MarginContainer" parent="DebugScreen"]
margin_right = 2560.0
margin_bottom = 1440.0
mouse_filter = 2

[node name="DebugMessage" type="Label" parent="DebugScreen/DebugMargin"]
margin_right = 2560.0
margin_bottom = 14.0
size_flags_vertical = 0

[connection signal="animation_finished" from="Animation" to="." method="_on_Animation_animation_finished"]
